test/compile_errors/err_do_missing_while.w
//! expect-check-fail: expected 'while' after do body

fn main:
    do:
        let _x = 1
